--- a/index.html
+++ b/index.html
@@ -14,6 +14,17 @@
     <div class="loader" id="loader" hidden>
       <img src="loader.svg" alt="loader" />
     </div>
+    <!-- image container -->
+    <div class="image-container" id="image-container">
+      <img
+        src="https://images.unsplash.com/photo-1469474968028-56623f02e42e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1474&q=80"
+        alt=""
+      />
+      <img
+        src="https://images.unsplash.com/photo-1469474968028-56623f02e42e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1474&q=80"
+        alt=""
+      />
+    </div>
     <!-- Script -->
     <script src="script.js"></script>
   </body>
